// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet import snippet 1`] = `
<pre><code class="language-js">export default function () {
  // ..
}
</code></pre>
<pre><code># Sample snippet file with no filename extension.
FROM ubuntu:latest
CMD echo hello!
</code></pre>
`;

exports[`snippet import snippet with highlight multiple lines 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet with highlight single and multiple lines 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet with highlight single line 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div><br>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet with indented region 1`] = `
<pre><code class="language-html">&lt;section&gt;
  &lt;h1&gt;Hello World&lt;/h1&gt;
&lt;/section&gt;
&lt;div&gt;Lorem Ipsum&lt;/div&gt;</code></pre>
`;

exports[`snippet import snippet with region 1`] = `
<pre><code class="language-js">function foo() {
  return {
    dest: &quot;../../vuepress&quot;,
    locales: {
      &quot;/&quot;: {
        lang: &quot;en-US&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue-powered Static Site Generator&quot;,
      },
      &quot;/zh/&quot;: {
        lang: &quot;zh-CN&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue 驱动的静态网站生成器&quot;,
      },
    },
    head: [
      [&quot;link&quot;, { rel: &quot;icon&quot;, href: \`/logo.png\` }],
      [&quot;link&quot;, { rel: &quot;manifest&quot;, href: &quot;/manifest.json&quot; }],
      [&quot;meta&quot;, { name: &quot;theme-color&quot;, content: &quot;#3eaf7c&quot; }],
      [&quot;meta&quot;, { name: &quot;apple-mobile-web-app-capable&quot;, content: &quot;yes&quot; }],
      [
        &quot;meta&quot;,
        { name: &quot;apple-mobile-web-app-status-bar-style&quot;, content: &quot;black&quot; },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;apple-touch-icon&quot;,
          href: \`/icons/apple-touch-icon-152x152.png\`,
        },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;mask-icon&quot;,
          href: &quot;/icons/safari-pinned-tab.svg&quot;,
          color: &quot;#3eaf7c&quot;,
        },
      ],
      [
        &quot;meta&quot;,
        {
          name: &quot;msapplication-TileImage&quot;,
          content: &quot;/icons/msapplication-icon-144x144.png&quot;,
        },
      ],
      [&quot;meta&quot;, { name: &quot;msapplication-TileColor&quot;, content: &quot;#000000&quot; }],
    ],
  };
}</code></pre>
`;

exports[`snippet import snippet with region and highlight 1`] = `
<pre><code class="language-js{1,3}">function foo() {
  return {
    dest: &quot;../../vuepress&quot;,
    locales: {
      &quot;/&quot;: {
        lang: &quot;en-US&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue-powered Static Site Generator&quot;,
      },
      &quot;/zh/&quot;: {
        lang: &quot;zh-CN&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue 驱动的静态网站生成器&quot;,
      },
    },
    head: [
      [&quot;link&quot;, { rel: &quot;icon&quot;, href: \`/logo.png\` }],
      [&quot;link&quot;, { rel: &quot;manifest&quot;, href: &quot;/manifest.json&quot; }],
      [&quot;meta&quot;, { name: &quot;theme-color&quot;, content: &quot;#3eaf7c&quot; }],
      [&quot;meta&quot;, { name: &quot;apple-mobile-web-app-capable&quot;, content: &quot;yes&quot; }],
      [
        &quot;meta&quot;,
        { name: &quot;apple-mobile-web-app-status-bar-style&quot;, content: &quot;black&quot; },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;apple-touch-icon&quot;,
          href: \`/icons/apple-touch-icon-152x152.png\`,
        },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;mask-icon&quot;,
          href: &quot;/icons/safari-pinned-tab.svg&quot;,
          color: &quot;#3eaf7c&quot;,
        },
      ],
      [
        &quot;meta&quot;,
        {
          name: &quot;msapplication-TileImage&quot;,
          content: &quot;/icons/msapplication-icon-144x144.png&quot;,
        },
      ],
      [&quot;meta&quot;, { name: &quot;msapplication-TileColor&quot;, content: &quot;#000000&quot; }],
    ],
  };
}</code></pre>
`;

exports[`snippet import snippet with region and single line highlight > 10 1`] = `
<pre><code class="language-js{11}">function foo() {
  return {
    dest: &quot;../../vuepress&quot;,
    locales: {
      &quot;/&quot;: {
        lang: &quot;en-US&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue-powered Static Site Generator&quot;,
      },
      &quot;/zh/&quot;: {
        lang: &quot;zh-CN&quot;,
        title: &quot;VuePress&quot;,
        description: &quot;Vue 驱动的静态网站生成器&quot;,
      },
    },
    head: [
      [&quot;link&quot;, { rel: &quot;icon&quot;, href: \`/logo.png\` }],
      [&quot;link&quot;, { rel: &quot;manifest&quot;, href: &quot;/manifest.json&quot; }],
      [&quot;meta&quot;, { name: &quot;theme-color&quot;, content: &quot;#3eaf7c&quot; }],
      [&quot;meta&quot;, { name: &quot;apple-mobile-web-app-capable&quot;, content: &quot;yes&quot; }],
      [
        &quot;meta&quot;,
        { name: &quot;apple-mobile-web-app-status-bar-style&quot;, content: &quot;black&quot; },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;apple-touch-icon&quot;,
          href: \`/icons/apple-touch-icon-152x152.png\`,
        },
      ],
      [
        &quot;link&quot;,
        {
          rel: &quot;mask-icon&quot;,
          href: &quot;/icons/safari-pinned-tab.svg&quot;,
          color: &quot;#3eaf7c&quot;,
        },
      ],
      [
        &quot;meta&quot;,
        {
          name: &quot;msapplication-TileImage&quot;,
          content: &quot;/icons/msapplication-icon-144x144.png&quot;,
        },
      ],
      [&quot;meta&quot;, { name: &quot;msapplication-TileColor&quot;, content: &quot;#000000&quot; }],
    ],
  };
}</code></pre>
`;

exports[`snippet import snippets when the file has a space in the file path 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;
